tambah fitur animasi ke web dengan AOS & GSAP

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- CSS Manual -->
     <link rel="stylesheet" href="style.css" />
 
@@ -46,7 +49,7 @@
     <section class="jumbotron text-center">
       <img src="img/gmbr.JPG" width="200" alt="Jonathan Nicholas H. Hasibuan" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Jonathan Nicholas H. Hasibuan</h1>
-      <p class="lead">Fresh Graduate | Universitas Bhayangkara Jakarta Raya</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -66,10 +69,10 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-duration="1800">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nam in iusto at quaerat ipsum tempore commodi earum praesentium? Ea.</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-duration="1800">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem illo eos, delectus nisi, explicabo modi hic ipsum nihil voluptatem sit excepturi dolor quis reiciendis. Quidem quas delectus inventore sed? Officia nulla similique
               mollitia ipsum deserunt.
@@ -97,7 +100,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-down" data-aos-duration="1500">
               <img src="img/projects/mb1.jpg" class="card-img-top" alt="Mobil 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -105,7 +108,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-down" data-aos-duration="1500" data-aos-delay="100">
               <img src="img/projects/mb1.jpg" class="card-img-top" alt="Mobil 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -113,7 +116,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-down" data-aos-duration="1500" data-aos-delay="200">
               <img src="img/projects/mb1.jpg" class="card-img-top" alt="Mobil 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -121,7 +124,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-down" data-aos-duration="1500" data-aos-delay="300">
               <img src="img/projects/mb1.jpg" class="card-img-top" alt="Mobil 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -129,7 +132,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-down" data-aos-duration="1500" data-aos-delay="400">
               <img src="img/projects/mb1.jpg" class="card-img-top" alt="Mobil 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -148,6 +151,70 @@
       </svg>
     </section>
     <!-- Akhir Projects -->
+
+    <!-- Gallery -->
+    <section id="gallery">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Gallery</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 1" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 2" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 3" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 4" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 5" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 6" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 7" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 8" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 9" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/mt1.jpg" alt="Motor 10" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Akhir Gallery -->
 
     <!-- Contact -->
     <section id="contact">
@@ -202,6 +269,29 @@
     <!-- Akhir Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const gallerImage = document.querySelectorAll(".gallery-img");
+
+      gallerImage.forEach((img, i) => {
+        img.dataset.aos = "fade-down";
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1500;
+      });
+
+      AOS.init();
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", { duration: 3, delay: 2, text: "Fresh Graduate | Universitas Bhayangkara Jakarta Raya" });
+      gsap.from(".jumbotron img", { duration: 1, y: -100, opacity: 0, ease: "back" });
+      gsap.from(".navbar", { duration: 1.5, y: "-100%", opacity: 0 });
+      gsap.from(".display-4", { duration: 2, x: -100, opacity: 0, delay: 1, ease: "sine" });
+    </script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbwD0HbGRSzo2FccWXDDdv9gvr_4rdGeiaFzjLM-nNL8naC4IMymNZla4uBA5ixa6capOg/exec";
